updates to jenkins build for jdk17